
5.2b1 -> 5.3a1
    - jbj: js: stub-in a Aug class.
    - jbj: augeas: stub-in rpmaug object with ctors/dtors.
    - jbj: augeas: add AutoFu to find augeas libraries.
    - jbj: js: stub-in requires/loadModule global methods.
    - jbj: js: save the rpmjs interpreter pointer in rt private data.
    - jbj: add the Fedorable tag(s) for file digests.
    - jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
    - jbj: squirrel: capture stdout in an iob.
    - jbj: squirrel: add --with-squirrel for embedding squirrel.
    - jbj: rpmgi: remove duplicated code.
    - jbj: header: add getter/setter for header parent.
    - jbj: add RPMSIGTAG_PADDING to force metadata header alignment in file.
    - jbj: save %pre/%post scriptlet's exit code and duration.
    - jbj: add header to rpmdb after, not before, %post is run.
    - jbj: replace freeSpec/freePackage with defines, eliminate symbols in ABI.
    - rse: upgrade build environment to GNU automake 1.11 and GNU m4 1.4.13
    - jbj: performance tweaks.
    - jbj: change default dep whiteout to ensure filessystem before setup.
    - jbj: prepare to save install scriptlet states/metrics.
    - jbj: build: add build scriptlet status/duration to SRPM headers.
    - jbj: build: use rpmsqExecve to run build scriptlets.
    - jbj: build: tear down _pkgPool/_specPool before exiting.
    - jbj: rpmsw: add an output FILE * argument.
    - jbj: build: put a stopwatch on build scriptlets.
    - jbj: rpmio: wrap posix_fallocate(3) / fallocate(2) (for rpmdb creation).
    - jbj: eliminate useless rebuilddb legacy "sanity check" hysteria.
    - jbj: display rebuilddb progress using ps(1) and top(1).
    - jbj: mark rebuilddb legacy hysteria for destruction.
    - jbj: add RPMTAG_SHA1HEADER to rpmdb pubkeys.
    - jbj: remove first (of 3) rpm-5.2.0 release process be-bugging flaws.
    - jbj: fix: resuscitate --nodigest/--nosignature w --rebuilddb.
    - jbj: pick-up some orphan check-ins.
    - jbj: header: remove (unused) headerUsageCount.